--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn[standard]
-recipe-scrapers
-pandas
-rapidfuzz
-requests
+
+fastapi==0.104.1
+uvicorn==0.24.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+rapidfuzz==3.5.2
